https en url_base marvel.html

--- a/marvel.html
+++ b/marvel.html
@@ -41,7 +41,7 @@
       var hash = "ef8e3b4df22503359d5a63565ad9d708";
       var public_key = "05b3a29c933af298f3dd61d4949af59c";
       var filtro = "aven";
-      var url_base = "http://gateway.marvel.com/v1/public/series";
+      var url_base = "https://gateway.marvel.com:443/v1/public/series";
       /* IDATZI TARTE HONETAN ZURE AZTERKETAREN JQUERY KODEA : HASIERA */
       /* ESCRIBE TU CÓDIGO JQUERY EN ESTE HUECO : INICIO */
 
